# perturbation-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
docs/: contribution-map.md  dynare-parity-suite.md  feasibility.md  implementation-scheme.md  math-notes.md  user-guide.md  validation.md
docs/plans/: 2026-02-21-perturbation-py-complete-implementation.md  2026-02-21-perturbation-py-mvp.md
scripts/: dynare-docker  dynare-local  dynare-octave-docker
src/perturbation_py/: __init__.py  benchmarks.py  cli.py  derivative_backends.py  derivatives.py  model.py  model_hessians.py  moments.py  policy.py  pruning.py  qz.py  serialization.py  simulation.py  solver.py  solver_second_order.py  solver_third_order.py  steady_state.py  tensor_ops.py  timing.py
src/perturbation_py/io/: __init__.py  dynare_mod.py  dynare_reference.py  dynare_results.py
tests/: helpers.py  test_cli_workflow.py  test_cross_order_consistency.py  test_derivative_backends.py  test_derivatives.py  test_docs_claims.py  test_dynare_io.py  test_girf.py  test_moments.py  test_package_smoke.py  test_parity_suite_models.py  test_policy_evaluation.py  test_pruning.py  test_release_smoke.py  test_simulation.py  test_solver.py  test_solver_first_order_diagnostics.py  test_solver_second_order.py  test_solver_third_order.py  test_steady_state.py  test_tensor_ops.py  test_timing.py
tests/fixtures/: dynare_parity_suite.py  nonlinear_parity_models.py
tests/integration/: test_dsge_mod_real_models.py  test_dynare_parity_order2.py  test_dynare_parity_suite.py
(+4 files in other folders)
